Fixed overflow issue with landing screen logo

--- a/src/Styles/JoinLobby.css
+++ b/src/Styles/JoinLobby.css
@@ -12,3 +12,8 @@
   font-size: calc(10px + 2vmin);
 }
 
+.JoinLobby-logo-img {
+  position: absolute;
+  top: 10%;
+}
+
